Implement scene editor and runtime model